unify Download/Export wording.
This fixes #2967

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -214,7 +214,7 @@ entry:
             share_email_label: "Courriel"
             public_link: "Lien public"
             delete_public_link: "Supprimer le lien public"
-            download: "Télécharger"
+            download: "Exporter"
             print: "Imprimer"
             problem:
                 label: "Un problème ?"
