--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -214,7 +214,7 @@ entry:
             share_email_label: 'E-Mail'
             public_link: 'Öffentlicher Link'
             delete_public_link: 'Lösche öffentlichen Link'
-            download: 'Herunterladen'
+            download: 'Exportieren'
             print: 'Drucken'
             problem:
                 label: 'Probleme?'
