--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -214,7 +214,7 @@ entry:
             share_email_label: 'نشانی ایمیل'
             # public_link: 'public link'
             # delete_public_link: 'delete public link'
-            download: 'بارگیری'
+            export: 'بارگیری'
             print: 'چاپ'
             problem:
                 label: 'مشکلات؟'
