--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -241,6 +241,9 @@ entry:
         save_label: "Enregistrer"
     public:
         shared_by_wallabag: "Cet article a été partagé par <a href=\"%wallabag_instance%\">wallabag</a>"
+    confirm:
+        delete: "Voulez-vous vraiment supprimer cet article ?"
+        delete_tag: "Voulez-vous vraiment supprimer ce tag de cet article ?"
 
 about:
     page_title: "À propos"
