--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -211,7 +211,7 @@ entry:
             view_original_article: 'Contenuto originale'
             re_fetch_content: 'Ri-ottieni pagina'
             delete: 'Elimina'
-            add_a_tag: 'Aggiungi un tag'
+            add_a_tag: 'Aggiungi un''etichetta'
             share_content: 'Condividi'
             share_email_label: 'E-mail'
             # public_link: 'public link'
@@ -222,7 +222,7 @@ entry:
                 label: 'Problemi?'
                 description: 'Questo contenuto viene visualizzato male?'
         edit_title: 'Modifica titolo'
-        original_article: 'originale'
+        original_article: 'Originale'
         annotations_on_the_entry: '{0} Nessuna annotazione|{1} Una annotazione|]1,Inf[ %count% annotazioni'
         created_at: 'Data di creazione'
         # published_at: 'Publication date'
@@ -246,7 +246,7 @@ entry:
         delete_tag: "Vuoi veramente rimuovere quell'etichetta da quell'articolo?"
 
 about:
-    page_title: 'About'
+    page_title: 'A proposito'
     top_menu:
         who_behind_wallabag: "Chi c'è dietro a wallabag"
         getting_help: 'Ottieni aiuto'
@@ -265,7 +265,7 @@ about:
         bug_reports: 'Bug reports'
         support: '<a href="https://github.com/wallabag/wallabag/issues">su GitHub</a>'
     helping:
-        description: 'wallabag è gratuito opensource. Puoi aiutarci:'
+        description: 'wallabag è gratuito ed OpenSource. Puoi aiutarci:'
         by_contributing: 'per contribuire al progetto:'
         by_contributing_2: 'un elenco delle attività richieste'
         by_paypal: 'via Paypal'
@@ -273,7 +273,7 @@ about:
         description: 'Un grazie ai collaboratori di wallabag web application'
     third_party:
         description: 'Ecco un elenco delle librerie di terze parti utilizzate in wallabag (con le rispettive licenze):'
-        package: 'Package'
+        package: 'Pacchetto'
         license: 'Licenza'
 
 howto:
@@ -299,7 +299,7 @@ howto:
         ios: 'sullo store di iTunes'
         windows: 'sullo store di Microsoft'
     bookmarklet:
-        description: 'Trascinando e rilasciando questo link sulla barra dei bookmark del tuo browser:'
+        description: 'Trascinando e rilasciando questo link sulla barra dei preferiti del tuo browser:'
     shortcuts:
         # page_description: Here are the shortcuts available in wallabag.
         # shortcut: Shortcut
@@ -333,7 +333,7 @@ quickstart:
     # more: 'More…'
     intro:
         title: 'Benvenuto su wallabag!'
-        paragraph_1: "Un tour in cui ti guideremo per scoprire e che ti mostrerà delle funzionalità che potrebbero interessarti."
+        paragraph_1: "Ti accompagneremo alla scoperta di wallabag e ti mostreremo delle funzionalità che potrebbero interessarti."
         paragraph_2: 'Seguici!'
     configure:
         title: "Configura l'applicazione"
@@ -383,9 +383,9 @@ quickstart:
         gitter: 'Su Gitter'
 
 tag:
-    page_title: 'Tags'
+    page_title: 'Etichette'
     list:
-        number_on_the_page: "{0} Non ci sono tag.|{1} C'è un tag.|]1,Inf[ ci sono %count% tag."
+        number_on_the_page: "{0} Non ci sono etichette.|{1} C'è un'etichetta.|]1,Inf[ ci sono %count% etichette."
         # see_untagged_entries: 'See untagged entries'
     new:
         # add: 'Add'
@@ -403,20 +403,20 @@ import:
         save_label: 'Carica file'
     pocket:
         page_title: 'Importa da > Pocket'
-        description: "Questo importatore copierà tutti i tuoi dati da Pocket. Pocket non ci consente di ottenere contenuti dal loro servzio, così il contenuto leggibile di ogni articolo verrà ri-ottenuto da wallabag."
+        description: "Questo importatore copierà tutti i tuoi dati da Pocket. Pocket non ci consente di ottenere contenuti dal loro servizio, così il contenuto leggibile di ogni articolo verrà ri-ottenuto da wallabag."
         config_missing:
             description: "Importazione da Pocket non configurata."
             admin_message: 'Devi definire %keyurls% una pocket_consumer_key %keyurle%.'
-            user_message: 'Il tuo amministratore di server deve define una API Key per Pocket.'
+            user_message: 'Il tuo amministratore del server deve definire una API Key per Pocket.'
         authorize_message: 'Puoi importare dati dal tuo account Pocket. Devi solo cliccare sul pulsante sottostante e autorizzare la connessione a getpocket.com.'
         connect_to_pocket: 'Connetti a Pocket and importa i dati'
     wallabag_v1:
         page_title: 'Importa da > Wallabag v1'
-        description: 'Questo importatore copierà tutti i tuoi dati da un wallabag v1. Nella tua pagina di configurazione, clicca su "JSON export" nella sezione "Esport i tuoi dati di wallabag". Otterrai un file "wallabag-export-1-xxxx-xx-xx.json".'
+        description: 'Questo importatore copierà tutti i tuoi dati da un wallabag v1. Nella tua pagina di configurazione, clicca su "JSON export" nella sezione "Esporta i tuoi dati di wallabag". Otterrai un file "wallabag-export-1-xxxx-xx-xx.json".'
         how_to: 'Seleziona la tua esportazione di wallabag e clicca sul pulsante sottostante caricare il file e importare i dati.'
     wallabag_v2:
         page_title: 'Importa da > Wallabag v2'
-        description: 'Questo importatore copierà tutti i tuoi dati da un wallabag v2. Vai in "Tutti i contenuti", e, nella sidebar di esportazione, clicca su "JSON". Otterrai un file "Tutti i contenuti.json".'
+        description: 'Questo importatore copierà tutti i tuoi dati da un wallabag v2. Vai in "Tutti i contenuti", e, nella barra laterale di esportazione, clicca su "JSON". Otterrai un file "Tutti i contenuti.json'
     readability:
         page_title: 'Importa da > Readability'
         # description: 'This importer will import all your Readability articles. On the tools (https://www.readability.com/tools/) page, click on "Export your data" in the "Data Export" section. You will received an email to download a json (which does not end with .json in fact).'
@@ -455,19 +455,19 @@ developer:
         title: 'Client esistenti'
         field_id: 'Client ID'
         field_secret: 'Client secret'
-        field_uris: 'Redirect URI'
-        field_grant_types: 'Tipi di grant permessi'
+        field_uris: 'URI di reindirizzamento'
+        field_grant_types: 'Tipi di permessi concessi'
         no_client: 'Ancora nessun client.'
     remove:
-        warn_message_1: "Hai la possibilitò di rimuovere questo client.L'operazione è IRREVERSIBILE!"
+        warn_message_1: "Hai la possibilità di rimuovere questo client. L'operazione è IRREVERSIBILE!"
         warn_message_2: "Se lo rimuovi, ogni app configurata con questo client non sarà più in grado di autenticarsi."
         action: 'Rimuovi questo client'
     client:
         # page_title: 'API clients management > Nuovo client'
-        page_description: 'Stai per creare un nuovo client. Compila i campi sottostanti per il redirect URI della tua applicazione.'
+        page_description: 'Stai per creare un nuovo client. Compila i campi sottostanti per lo URI di reindirizzamento della tua applicazione.'
         form:
             # name_label: 'Name of the client'
-            redirect_uris_label: 'Redirect URI'
+            redirect_uris_label: 'URI di reindirizzamento'
             save_label: 'Crea un nuovo client'
         action_back: 'Indietro'
     client_parameter:
@@ -477,7 +477,7 @@ developer:
         field_id: 'Client ID'
         field_secret: 'Client secret'
         back: 'Indietro'
-        read_howto: 'Leggi howto "Come creare la mia prima applicazione"'
+        read_howto: 'Leggi "Come creare la mia prima applicazione"'
     howto:
         # page_title: 'API clients management > Come creare la mia prima applicazione'
         description:
@@ -530,9 +530,9 @@ flashes:
             password_not_updated_demo: "In modalità demo, non puoi cambiare la password dell'utente."
             user_updated: 'Informazioni aggiornate'
             rss_updated: 'Informazioni RSS aggiornate'
-            tagging_rules_updated: 'Regole di tagging aggiornate'
-            tagging_rules_deleted: 'Regola di tagging aggiornate'
-            rss_token_updated: 'RSS token aggiornato'
+            tagging_rules_updated: 'Regole di etichettatura aggiornate'
+            tagging_rules_deleted: 'Regole di etichettatura eliminate'
+            rss_token_updated: 'Token RSS aggiornato'
             # annotations_reset: Annotations reset
             # tags_reset: Tags reset
             # entries_reset: Entries reset
@@ -552,7 +552,7 @@ flashes:
             entry_deleted: 'Contenuto eliminato'
     tag:
         notice:
-            tag_added: 'Tag aggiunto'
+            tag_added: 'Etichetta aggiunta'
     import:
         notice:
             failed: 'Importazione fallita, riprova.'
