--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -71,7 +71,7 @@ config:
             # 300_word: 'I read ~300 words per minute'
             # 400_word: 'I read ~400 words per minute'
         action_mark_as_read:
-            # label: 'Where do you to be redirected after mark an article as read?'
+            # label: 'Where do you want to be redirected to after marking an article as read?'
             # redirect_homepage: 'To the homepage'
             # redirect_current_page: 'To the current page'
         pocket_consumer_key_label: Brugers nøgle til Pocket for at importere materialer
