--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -71,7 +71,7 @@ config:
             300_word: 'من تقریباً ۳۰۰ واژه را در دقیقه می‌خوانم'
             400_word: 'من تقریباً ۴۰۰ واژه را در دقیقه می‌خوانم'
         action_mark_as_read:
-            # label: 'Where do you to be redirected after mark an article as read?'
+            # label: 'Where do you want to be redirected to after marking an article as read?'
             # redirect_homepage: 'To the homepage'
             # redirect_current_page: 'To the current page'
         pocket_consumer_key_label: کلید کاربری Pocket برای درون‌ریزی مطالب
