--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -71,7 +71,7 @@ config:
             300_word: 'Leggo ~300 parole al minuto'
             400_word: 'Leggo ~400 parole al minuto'
         action_mark_as_read:
-            # label: 'Where do you to be redirected after mark an article as read?'
+            # label: 'Where do you want to be redirected to after marking an article as read?'
             # redirect_homepage: 'To the homepage'
             # redirect_current_page: 'To the current page'
         pocket_consumer_key_label: Consumer key per Pocket per importare i contenuti
