--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -71,7 +71,7 @@ config:
             300_word: 'Posso ler ~300 palavras por minuto'
             400_word: 'Posso ler ~400 palavras por minuto'
         action_mark_as_read:
-            # label: 'Where do you to be redirected after mark an article as read?'
+            # label: 'Where do you want to be redirected to after marking an article as read?'
             # redirect_homepage: 'To the homepage'
             # redirect_current_page: 'To the current page'
         pocket_consumer_key_label: 'Chave do consumidor do Pocket para importar conteúdo'
