--- a/src/Wallabag/CoreBundle/Resources/translations/validators.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/validators.pl.yml
@@ -4,4 +4,4 @@ validator:
     password_wrong_value: 'Twoje obecne hasło jest błędne'
     item_per_page_too_high: 'To może spowodować problemy z aplikacją'
     rss_limit_too_high: 'To może spowodować problemy z aplikacją'
-    # quote_length_too_high: 'The quote is too long. It should have {{ limit }} characters or less.'
+    quote_length_too_high: 'Cytat jest zbyt długi. powinien mieć {{ limit }} znaków lub mniej.'
